part of tilemap;

class Image {
  String source;
  num width;
  num height;

  Image(this.source, this.width, this.height);
}